feat: Add MongoDB user management
User is now able to create/update/delete MongoDB users
and assign them roles for specific databases

closes #25
