# api/openapi.yaml
@@ -80,8 +80,7 @@ paths:
         in: path
         required: true
         schema:
-          type: string
-          pattern: ^[a-z0-9][a-z0-9-]{2,18}[a-z0-9]$
+          $ref: '#/components/schemas/ProjectId'
     get:
       operationId: GetProject
       tags:
@@ -122,8 +121,7 @@ paths:
         in: path
         required: true
         schema:
-          type: string
-          pattern: ^[a-z0-9][a-z0-9-]{2,18}[a-z0-9]$
+          $ref: '#/components/schemas/ProjectId'
     get:
       operationId: GetProjectParticipants
       tags:
@@ -151,8 +149,7 @@ paths:
         in: path
         required: true
         schema:
-          type: string
-          pattern: ^[a-z0-9][a-z0-9-]{2,18}[a-z0-9]$
+          $ref: '#/components/schemas/ProjectId'
       - name: username
         in: path
         required: true
@@ -225,8 +222,7 @@ paths:
         in: path
         required: true
         schema:
-          type: string
-          pattern: ^[a-z0-9][a-z0-9-]{2,18}[a-z0-9]$
+          $ref: '#/components/schemas/ProjectId'
     post:
       operationId: RegenerateInviteCode
       tags:
@@ -257,8 +253,7 @@ paths:
         in: path
         required: true
         schema:
-          type: string
-          pattern: ^[a-z0-9][a-z0-9-]{2,18}[a-z0-9]$
+          $ref: '#/components/schemas/ProjectId'
     get:
       operationId: GetSecrets
       tags:
@@ -319,14 +314,12 @@ paths:
         in: path
         required: true
         schema:
-          type: string
-          pattern: ^[a-z0-9][a-z0-9-]{2,18}[a-z0-9]$
+          $ref: '#/components/schemas/ProjectId'
       - name: name
         in: path
         required: true
         schema:
-          type: string
-          pattern: ^[a-zA-Z0-9_-]{1,255}$
+          $ref: '#/components/schemas/SecretName'
     delete:
       operationId: DeleteSecret
       tags:
@@ -595,6 +588,136 @@ paths:
         500:
           $ref: '#/components/responses/InternalServerError'
 
+  /api/v1/managed_services/{id}/mongodb/users:
+    parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+    get:
+      operationId: GetMongoDbUsers
+      tags:
+        - mongodb
+      summary: Get MongoDB users
+      responses:
+        200:
+          description: Retrieved MongoDB users
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/MongoDbUser'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/InternalServerError'
+    post:
+      operationId: CreateMongoDbUser
+      tags:
+        - mongodb
+      summary: Create MongoDB user
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/MongoDbUser'
+      responses:
+        200:
+          description: Created user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MongoDbUser'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/InternalServerError'
+    put:
+      operationId: UpdateMongoDbUser
+      tags:
+        - mongodb
+      summary: Update MongoDB user
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/MongoDbUser'
+      responses:
+        200:
+          description: Updated MongoDB user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MongoDbUser'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/InternalServerError'
+
+  /api/v1/managed_services/{id}/mongodb/users/{username}:
+    parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+      - name: username
+        in: path
+        required: true
+        schema:
+          type: string
+          minLength: 1
+    get:
+      operationId: GetMongoDbUser
+      tags:
+        - mongodb
+      summary: Get MongoDB user
+      responses:
+        200:
+          description: Retrieved MongoDB user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/MongoDbUser'
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/InternalServerError'
+    delete:
+      operationId: DeleteMongoDbUser
+      tags:
+        - mongodb
+      summary: Delete MongoDB user
+      responses:
+        200:
+          description: Success
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        500:
+          $ref: '#/components/responses/InternalServerError'
+
   /api/v1/tokens:
     post:
       operationId: CreateTempToken
@@ -705,12 +828,17 @@ components:
       name: API-Key
 
   schemas:
+    ProjectId:
+      type: string
+      pattern: ^[a-z0-9][a-z0-9-]{2,18}[a-z0-9]$
+      minLength: 4
+      maxLength: 20
+
     Project:
       type: object
       properties:
         id:
-          type: string
-          pattern: ^[a-z0-9][a-z0-9-]{2,18}[a-z0-9]$
+          $ref: '#/components/schemas/ProjectId'
       required:
         - id
 
@@ -747,8 +875,7 @@ components:
           type: integer
           readOnly: true
         project:
-          type: string
-          pattern: ^[a-z0-9][a-z0-9-]{2,18}[a-z0-9]$
+          $ref: '#/components/schemas/ProjectId'
         name:
           type: string
           pattern: ^[a-z0-9]([a-z0-9-]{0,18}[a-z0-9])?$
@@ -797,8 +924,7 @@ components:
           type: integer
           readOnly: true
         project:
-          type: string
-          pattern: ^[a-z0-9][a-z0-9-]{2,18}[a-z0-9]$
+          $ref: '#/components/schemas/ProjectId'
         name:
           type: string
           pattern: ^[a-z0-9]([a-z0-9-]{0,18}[a-z0-9])?$
@@ -810,11 +936,46 @@ components:
             - mongo
             - rabbitmq
             - redis
+            - kafka
       required:
         - id
         - project
         - name
         - type
+
+    MongoDbUser:
+      type: object
+      properties:
+        username:
+          type: string
+          minLength: 1
+          maxLength: 255
+        passwordSecret:
+          $ref: '#/components/schemas/SecretName'
+          writeOnly: true
+        roles:
+          type: array
+          items:
+            $ref: '#/components/schemas/MongoDbRole'
+      required:
+        - username
+        - roles
+
+    MongoDbRole:
+      type: object
+      properties:
+        role:
+          type: string
+          enum:
+            - read
+            - readWrite
+            - dbAdmin
+        db:
+          type: string
+          minLength: 1
+      required:
+        - role
+        - db
 
     EnvVar:
       allOf:
@@ -836,17 +997,21 @@ components:
             - type: object
               properties:
                 secret:
-                  type: string
-                  pattern: ^[a-z0-9]([a-z0-9-]{0,253}[a-z0-9])?$
+                  $ref: '#/components/schemas/SecretName'
               required:
                 - secret
+
+    SecretName:
+      type: string
+      pattern: ^[a-z0-9]([a-z0-9-]{0,253}[a-z0-9])?$
+      minLength: 1
+      maxLength: 255
 
     Secret:
       type: object
       properties:
         name:
-          type: string
-          pattern: ^[a-z0-9]([a-z0-9-]{0,253}[a-z0-9])?$
+          $ref: '#/components/schemas/SecretName'
         managedServiceId:
           type: integer
           readOnly: true
